crates/specforge-cli/tests/snapshots/tests__parity__init__cli.snap
---
source: crates/specforge-cli/tests/parity.rs
expression: cli_snap
---
{
  "check": {
    "diagnostics": [
      "Info I002"
    ],
    "ok": true
  },
  "config": {
    "$schema": "https://specforge.dev/schema/specforge.json",
    "extensions": [],
    "name": "demo",
    "spec_root": "spec",
    "version": "0.1.0"
  },
  "files": {
    ".gitignore": "specforge-infer.json\nspecforge-report.json\n.specforge/\n",
    "spec/hello.spec": "// demo — starter spec file\n//\n// This file uses only structural syntax that the core compiler\n// understands without any extensions. Install extensions to unlock\n// domain-specific entity types.\n//\n// Try: specforge check\n\nspec \"demo\" {\n  version \"0.1.0\"\n}\n"
  },
  "ok": true,
  "payload": {
    "config_path": "[ROOT]/specforge.json",
    "extensions_installed": [],
    "project_root": "[ROOT]",
    "spec_file_path": "[ROOT]/spec/hello.spec"
  }
}
